--- a/wwwroot/viewlog.html
+++ b/wwwroot/viewlog.html
@@ -7,5 +7,8 @@
     </div>
     <div class="card-body">
         <pre id="log-content" class="p-3 bg-light rounded">Loading log content...</pre>
+        <button id="refresh-log-button" class="btn btn-primary">
+            <i class="fas fa-sync"></i> Refresh Log
+        </button>
     </div>
 </div>
