--- a/wwwroot/triggers.html
+++ b/wwwroot/triggers.html
@@ -49,7 +49,7 @@
                          </div>
                       <div class="form-group">
                          <label for="edit-trigger-time">Event Time</label>
-                         <input type="time" class="form-control" id="edit-trigger-time">
+                         <input type="datetime-local" class="form-control" id="edit-trigger-time">
                             <div id="edit-trigger-time-error" class="text-danger" style="display: none;">Please enter a valid time.</div>
                        </div>
                        <div class="form-group">
@@ -84,7 +84,7 @@
                          </div>
                        <div class="form-group">
                            <label for="new-trigger-time">Event Time</label>
-                            <input type="time" class="form-control" id="new-trigger-time" required>
+                            <input type="datetime-local" class="form-control" id="new-trigger-time" required>
                             <div id="new-trigger-time-error" class="text-danger" style="display: none;">Please enter a valid time.</div>
                        </div>
                        <div class="form-group">
