--- a/wwwroot/schedule-list.html
+++ b/wwwroot/schedule-list.html
@@ -1,4 +1,4 @@
-<!-- Be Naame Khoda -->
+      <!-- Be Naame Khoda -->
 <!-- FileName: wwwroot/schedule-list.html -->
 
 <div class="card">
@@ -11,7 +11,7 @@
             <i class="fas fa-spinner fa-spin fa-3x"></i>
             <p>Loading schedule...</p>
         </div>
-        <div id="schedule-list-content" style="display: none;">
+         <div id="schedule-list-content" style="display: none;">
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -22,6 +22,8 @@
                         <th>Last Play Time</th>
                         <th>Trigger Time</th>
                         <th>Status</th>
+                        <th>Time to Play</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody id="schedule-list-body">
@@ -34,3 +36,25 @@
         </div>
     </div>
 </div>
+<!-- Playlist Modal -->
+<div class="modal fade" id="playlist-modal" tabindex="-1" role="dialog" aria-labelledby="playlistModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="playlistModalLabel">Playlist</h5>
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                 </button>
+            </div>
+            <div class="modal-body">
+                <ul id="playlist-items" class="list-group">
+                    <!-- Playlist items will be dynamically inserted here -->
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+    
