--- a/wwwroot/schedule-list.html
+++ b/wwwroot/schedule-list.html
@@ -42,14 +42,14 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="playlistModalLabel">Playlist</h5>
-                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
-                 </button>
+                </button>
             </div>
             <div class="modal-body">
-                <ul id="playlist-items" class="list-group">
-                    <!-- Playlist items will be dynamically inserted here -->
-                </ul>
+                <div id="playlist-items">
+                <!-- Playlist items will be dynamically inserted here -->
+                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
