--- a/wwwroot/schedule-list.html
+++ b/wwwroot/schedule-list.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 <!-- Playlist Modal -->
-<div class="modal fade" id="playlist-modal" tabindex="-1" role="dialog" aria-labelledby="playlistModalLabel" aria-hidden="true">
+<div class="modal fade" id="playlist-modal" tabindex="-1" role="dialog" aria-labelledby="playlistModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
